--- a/public/index.html
+++ b/public/index.html
@@ -29,23 +29,18 @@
 
 
 <div class="container">
-    <header class="header clearfix">
-        <nav>
-            <ul class="nav nav-pills float-right">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-            </ul>
-        </nav>
-        <h3 class="text-muted">React Weather App</h3>
-    </header>
+    <div class="row mb-3">
+        <div class="col">
+            <h3 class="text-muted text-center">React Weather App</h3>
+        </div>
+    </div>
 
     <main role="main">
         <div id="root"></div>
     </main>
 
-    <footer class="footer">
-        <p>&copy; Company 2017</p>
+    <footer class="footer text-center">
+        <p>an experiment by <a href="https://ph.linkedin.com/in/jirffey-gabuya" target="_blank">Jirffey Gabuya</a></p>
     </footer>
 
 </div> <!-- /container -->
